--- a/src/components/Loader.css
+++ b/src/components/Loader.css
@@ -1,7 +1,5 @@
-/* Media Queries for Loader */
 @import "fonts/fonts.css";
 
-/* Full-screen loader container */
 .loader-container {
   position: fixed;
   top: 0;
@@ -27,7 +25,6 @@
   z-index: 9999;
   transition: opacity 0.7s ease-in-out;
 
-  /* Text styling */
   .loader-text,
   .loader-quote {
     font-family: Poppins;
@@ -40,28 +37,24 @@
     animation-timing-function: ease-in-out;
   }
 
-  /* First text "MHV Education" */
   .loader-text {
     animation: fadeInOut 1.5s forwards;
-    animation-iteration-count: 1; /* Run the animation only once */
-    animation-delay: 0s; /* Ensure it starts immediately */
+    animation-iteration-count: 1;
+    animation-delay: 0s;
   }
 
-  /* Second text (Random Quote) */
   .loader-quote {
     animation: fadeInOut 2.5s forwards;
-    animation-delay: 1.5s; /* Start after "MHV Education" fades out */
-    animation-iteration-count: 1; /* Run the animation only once */
+    animation-delay: 1.5s;
+    animation-iteration-count: 1;
   }
 
-  /* Fully fade out the loader before switching pages */
   .loader-fadeout {
     animation: fadeOut 1s forwards;
     pointer-events: none;
   }
 }
 
-/* Gradient animation */
 @keyframes gradient-animation {
   0% {
     background-position: 0% 50%;
@@ -80,7 +73,6 @@
   }
 }
 
-/* Fade in and out animation */
 @keyframes fadeInOut {
   0% {
     opacity: 0;
@@ -102,7 +94,6 @@
   }
 }
 
-/* Fade out animation */
 @keyframes fadeOut {
   0% {
     opacity: 1;
@@ -112,7 +103,6 @@
   }
 }
 
-/* Media Queries for different screen sizes */
 @media (max-width: 1023px) {
   .loader-container {
     .loader-text,
@@ -142,8 +132,6 @@
     }
   }
 }
-
-/* responsive css for mobile  */
 
 @media (max-width: 320px) {
   .loader-container {
