--- a/src/components/contact-content/ContactContent.css
+++ b/src/components/contact-content/ContactContent.css
@@ -5,14 +5,14 @@
   width: 100%;
   height: 80vh;
   display: flex;
-  /* background-color: red; */
+
   justify-content: center;
   align-items: center;
   align-content: center;
   font-family: Poppins;
   .contact-header {
     text-align: center;
-    /* margin-bottom: 40px; */
+
     z-index: 5;
     h1 {
       font-size: 3rem;
@@ -26,7 +26,7 @@
   .bgvid {
     padding: 65px 50px;
     position: absolute;
-    /* padding-top: 125px; */
+
     top: 0%;
     left: 0%;
     width: 100%;
@@ -47,20 +47,7 @@
   justify-content: center;
   height: auto;
   width: 100%;
-  /* font-family: patron-m; */
 
-  /* background: linear-gradient(to right, #ffb3ba, #ffdfba, #ffffba); */
-
-  /* background: radial-gradient(
-    circle at center,
-    #ffffff,
-    #fad0c4,
-    #fad0c4,
-    #fbc2eb,
-    #a6c1ee,
-    #e2f5b5,
-    #b3f7bc
-  ); */
   background-size: 400% 400%;
   animation: gradient-animation 15s ease infinite;
 }
@@ -103,7 +90,7 @@
 
 .contact-form {
   width: 90%;
-  /* animation: fadeIn 1s forwards; */
+
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -111,7 +98,7 @@
   backdrop-filter: saturate(180%) blur(15px);
   border-radius: 10px;
   justify-content: center;
-  /* align-items: center; */
+
   padding: 25px 25px;
   display: flex;
   flex-direction: column;
@@ -182,43 +169,9 @@ button[type="submit"]:hover {
 
 .contact-content p {
   margin-top: 10px;
-  color: #ff0; /* Ensure text color is yellow */
+  color: #ff0;
 }
 
-/* .texts-container {
-  color: #fff;
-  font-size: 2rem;
-  font-family: 'Arial', sans-serif;
-  display: flex;
-  gap: 10px;
-  animation: fadein 2s ease-in-out infinite;
-}
-
-.texts-container span {
-  animation: preloaderText 1s infinite alternate;
-} */
-/* 
-@keyframes preloaderText {
-  0% {
-    transform: translateY(0);
-    opacity: 0.5;
-  }
-  100% {
-    transform: translateY(-10px);
-    opacity: 1;
-  }
-} */
-
-/* @keyframes fadein {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-} */
-
-/* Main container styling */
 .social-media-container {
   text-align: center;
   height: 30vh;
@@ -229,7 +182,6 @@ button[type="submit"]:hover {
   font-family: Poppins;
 }
 
-/* Title styling */
 .social-media-container .title {
   font-size: 28px;
   font-weight: 800;
@@ -238,14 +190,12 @@ button[type="submit"]:hover {
   margin-bottom: 20px;
 }
 
-/* Social media list styling */
 .social-media-list {
   list-style-type: none;
   display: flex;
   justify-content: center;
-  /* gap: 16px; */
+
   padding: 0;
-  /* background-color: #ffffff; */
 }
 
 .social-media-list li {
@@ -259,9 +209,7 @@ button[type="submit"]:hover {
   transition: all 0.5s ease;
 }
 
-/* Icon styling */
 .social-media-list li a {
-  /* color: #fff; */
   background-color: transparent;
   filter: invert(0);
   font-size: 24px;
@@ -273,7 +221,6 @@ button[type="submit"]:hover {
   transform: translateY(0px);
 }
 
-/* Hover effect for icons */
 .social-media-list li:hover {
   background-color: #ffffff;
   filter: invert(1);
@@ -292,12 +239,10 @@ i.fa-solid {
   color: #000;
 }
 
-/* Display text under icon on hover */
 .social-media-list li:hover span {
   opacity: 1;
 }
 
-/* Hidden label styling */
 .social-media-list li a span {
   position: absolute;
   bottom: -13px;
@@ -308,12 +253,9 @@ i.fa-solid {
   transition: all 0.3s ease;
 }
 
-/* Show label only when the item is hovered */
 .social-media-list li:hover a span {
   color: #000;
 }
-
-/* -------------------------------------------- */
 
 .contact-content {
   display: grid;
@@ -383,7 +325,6 @@ i.fa-solid {
   font-size: 1rem;
 }
 
-/* Responsive */
 @media (max-width: 800px) {
   .contact-content {
     grid-template-columns: 1fr;
