--- a/src/components/courses-content/coursesContent.css
+++ b/src/components/courses-content/coursesContent.css
@@ -9,26 +9,25 @@
   background: url("../../img/vid1.mp4") no-repeat center center;
   background-size: contain;
   display: flex;
-  /* background-color: red; */
+
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
   width: 100%;
-  /* padding: 65px 60px; */
+
   .bg {
     display: flex;
-    /* background-color: red; */
+
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* width: 100%; */
-    /* padding: 60px; */
+
     color: #ffffff;
     video {
       position: absolute;
       z-index: -1;
-      /* border: #ffea00 3px solid; */
+
       align-items: center;
       width: 93%;
       height: 84%;
@@ -39,13 +38,13 @@
       font-size: 3.5em;
       font-family: "Sofia Pro Bold";
       margin-bottom: 20px;
-      /* background-color: red; */
+
       text-align: center;
       text-transform: uppercase;
     }
     p {
       font-size: 1.1em;
-      /* line-height: 1.5em; */
+
       text-align: center;
       margin-bottom: 20px;
       width: 80%;
@@ -64,7 +63,6 @@
   }
 }
 
-/*Courses Grid */
 .courses-grid {
   display: flex;
   flex-wrap: wrap;
@@ -87,7 +85,7 @@
 
 .course-card {
   width: 420px;
-  /* border: #7c7c7c7c 1px solid; */
+
   background-color: #ffffff;
   border-radius: 12px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
@@ -100,8 +98,7 @@
 .course-details {
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
-  /* height: 100%; */
+
   padding: 20px;
 }
 .course-card:hover {
@@ -151,20 +148,19 @@
 
 .course-title {
   display: flex;
-  /* text-align: center; */
+
   align-items: center;
   font-size: 20px;
   line-height: 1.2;
   font-weight: bold;
   color: #111827;
-  /* background-color: red; */
+
   height: 110px;
   font-family: Poppins;
   margin-bottom: 10px;
 }
 
 .course-description {
-  /* background-color: red; */
   color: #374151;
   margin-bottom: 15px;
   font-family: Poppins;
@@ -198,19 +194,18 @@
 }
 .datax {
   display: flex;
-  /* background-color: red; */
+
   color: #666;
   width: fit-content;
   justify-self: center;
   align-self: center;
   height: 50%;
-  /* align-self: center; */
-  /* padding-left: 30px; */
+
   flex-direction: column;
   gap: 10px;
   justify-content: center;
   align-items: left;
-  /* margin-bottom: 10px; */
+
   font-family: Poppins;
   font-size: 14px;
 }
@@ -223,14 +218,14 @@
   align-self: center;
   align-items: center;
   text-align: center;
-  /* gap: 20px; */
+
   margin-bottom: 30px;
   h1 {
     font-size: 3em;
     text-transform: uppercase;
     font-weight: 800;
     color: #333;
-    /* border-bottom: 3px solid #333; */
+
     width: 100%;
   }
   p {
@@ -264,7 +259,7 @@
   width: 100%;
   font-weight: 600;
   padding: 8px;
-  /* border: none; */
+
   border: green 1px solid;
   border-radius: 8px;
   cursor: pointer;
@@ -275,7 +270,6 @@
   }
 }
 .down-button:hover {
-  /* background-color: #1d4ed8; */
   background-color: green;
   color: white;
   i {
@@ -283,15 +277,13 @@
   }
 }
 .enroll-button {
-  /* background-color: #2563eb; */
-  /* color: #ffffff; */
   background-color: transparent;
   border: #2563eb 1px solid;
   width: 100%;
   font-size: 16px;
   font-weight: 600;
   padding: 8px;
-  /* border: none; */
+
   color: #2563eb;
   border-radius: 8px;
   cursor: pointer;
@@ -299,16 +291,14 @@
 }
 
 .enroll-button:hover {
-  /* background-color: #1d4ed8; */
   background-color: #2563eb;
   color: #ffffff;
 }
 
-/* section-3 */
 .containerr {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
+
   width: 100%;
   margin: auto;
   padding: 80px 180px;
@@ -329,7 +319,7 @@
   font-family: worksans-n5;
   font-weight: 300;
   align-self: center;
-  /* background-color: red; */
+
   max-width: 700px;
   margin-bottom: 50px;
   color: #6b7280;
@@ -349,11 +339,6 @@
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-/* .feature-card:hover {
-  transform: translateY(-10px);
-  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.15);
-} */
-
 .feature-icon {
   font-size: 3rem;
   width: fit-content;
@@ -361,7 +346,7 @@
   margin-bottom: 15px;
   align-self: center;
   justify-self: center;
-  transition: transform 0.3s ease; /* Add transition for smooth effect */
+  transition: transform 0.3s ease;
 }
 
 .feature-icon:hover {
@@ -442,7 +427,7 @@
     font-size: 14px;
     color: #666;
     margin: 10px 0;
-    /* background-color: red; */
+
     width: fit-content;
     text-align: center;
     padding-left: 60px;
@@ -491,7 +476,6 @@
   background-color: #ffb366;
 }
 
-/* Smooth fade-in effect */
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -503,7 +487,6 @@
   }
 }
 
-/* media quieries  */
 @media screen and (max-width: 1024px) {
   .courses-grid {
     padding: 20px 10px;
