--- a/src/components/home-content/homeContent.css
+++ b/src/components/home-content/homeContent.css
@@ -3,14 +3,11 @@
 .pg1section1 {
   display: flex;
   align-items: center;
-
+  justify-content: space-between;
   padding: 50px 50px;
-
   background: #ffffff;
-  height: 100vh;
-  justify-content: space-around;
+  height: auto;
 }
-
 .content {
   max-width: 50%;
 
@@ -137,13 +134,19 @@
   justify-content: center;
   width: 650px;
   height: 525px;
-  background-image: url("../../img/pic1.webp");
-  background-repeat: no-repeat;
-  background-position: center center;
+  object-fit: cover;
   background-size: cover;
   border-radius: 12px;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.4);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+  .imgcon {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    overflow: hidden;
+  }
 }
 
 .image-container:hover {
@@ -152,6 +155,7 @@
 }
 
 .image-overlay {
+  position: absolute;
   align-self: center;
   margin-top: 375px;
   justify-self: center;
@@ -439,129 +443,4 @@
 .faq-question.active {
   background-color: #dbeafe;
   color: #1d4ed8;
-}
-
-@media (max-width: 768px) {
-  .tag {
-    display: none;
-    padding: 5px 10px;
-    border-radius: 15px;
-    font-size: 14px;
-    color: transparent;
-    font-weight: 600;
-  }
-
-  .content h1 {
-    margin-top: 5vh;
-  }
-
-  .students {
-    display: none;
-  }
-
-  .section-title {
-    font-size: 1.5rem;
-    color: #000000;
-    text-align: center;
-    font-family: DM-Sans2;
-    font-weight: 800;
-  }
-
-  .button-underline {
-    display: none;
-  }
-}
-
-.whatsapp-float {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  z-index: 1000;
-  text-align: right;
-}
-
-.whatsapp-menu {
-  display: none;
-  flex-direction: column;
-  position: absolute;
-  bottom: 60px;
-  right: 0;
-  background: transparent;
-
-  backdrop-filter: blur(10px);
-
-  border-radius: 8px;
-  padding: 10px;
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.6);
-  width: 250px;
-}
-
-.whatsapp-float:hover .whatsapp-menu {
-  display: flex;
-}
-
-.whatsapp-btn {
-  display: block;
-  text-decoration: none;
-  color: #fff;
-
-  background: #161616;
-
-  padding: 12px 15px;
-  border-radius: 5px;
-  font-size: 14px;
-  margin-bottom: 6px;
-  transition: background 0.3s ease, transform 0.2s ease;
-  text-align: left;
-  font-weight: 500;
-}
-
-.whatsapp-btn:hover {
-  background: #333;
-
-  transform: translateX(5px);
-}
-
-.whatsapp-icon {
-  width: 35px;
-  height: 35px;
-  transition: transform 0.3s ease;
-}
-
-.whatsapp-icon:hover {
-  transform: scale(1.1);
-}
-
-@media (max-width: 768px) {
-  .whatsapp-menu {
-    display: none !important;
-  }
-
-  .whatsapp-float {
-    bottom: 15px;
-    right: 15px;
-  }
-
-  .whatsapp-icon {
-    width: 50px;
-    height: 50px;
-  }
-}
-
-@media (max-width: 480px) {
-  .whatsapp-float {
-    bottom: 10px;
-    right: 10px;
-  }
-
-  .whatsapp-icon {
-    width: 45px;
-    height: 45px;
-  }
-}
-.whatsapp-float.hide {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  transition: opacity 0.4s ease, visibility 0.4s ease;
 }
