--- a/src/components/courses-content/coursesContent.css
+++ b/src/components/courses-content/coursesContent.css
@@ -265,7 +265,7 @@
   color: green;
   font-size: 16px;
   width: 100%;
-  font-weight: 600;
+  font-weight: 700;
   padding: 8px;
   border: green 1px solid;
   border-radius: 8px;
@@ -288,7 +288,8 @@
   border: #2563eb 1px solid;
   width: 100%;
   font-size: 16px;
-  font-weight: 600;
+  font-weight: 700;
+  text-align: center;
   padding: 8px;
   color: #2563eb;
   border-radius: 8px;
