--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -347,7 +347,11 @@
 
   .logo {
     margin: 0;
-    
+    padding: 0;
+  }
+  .logo img {
+    height: 60px;
+    width: 100%;
   }
   .sidebar-logo {
     width: 80px;
