--- a/src/components/contact-content/ContactContent.css
+++ b/src/components/contact-content/ContactContent.css
@@ -5,46 +5,41 @@
   width: 100%;
   height: 80vh;
   display: flex;
-
   justify-content: center;
   align-items: center;
   align-content: center;
   font-family: Poppins;
+}
+.contact-header {
+  text-align: center;
+  z-index: 5;
 
-  .contact-header {
-    text-align: center;
-
-    z-index: 5;
-
-    h1 {
-      font-size: 3rem;
-      color: #ffffff;
-    }
-
-    p {
-      font-size: 1.1rem;
-      color: #ffffff;
-    }
+  h1 {
+    font-size: 3rem;
+    color: #ffffff;
   }
 
-  .bgvid {
-    padding: 65px 50px;
-    position: absolute;
-
-    top: 0%;
-    left: 0%;
-    width: 100%;
-    height: 90vh;
-
-    video {
-      object-fit: cover;
-      width: 100%;
-
-      height: 100%;
-    }
+  p {
+    font-size: 1.1rem;
+    color: #ffffff;
   }
 }
+.bgvid {
+  padding: 65px 50px;
+  position: absolute;
 
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 90vh;
+
+  video {
+    object-fit: cover;
+    width: 100%;
+
+    height: 100%;
+  }
+}
 .hi-ccontainer {
   display: flex;
   flex-direction: column;
@@ -352,21 +347,9 @@ i.fa-solid {
   }
 
   .bgvid {
-    display: none;
-  }
-
-  .contact-header h1 {
-    display: none;
-  }
-
-  .contact-header p {
-    display: none;
-  }
-
-  .bgvid {
-    padding: 0;
+    /* padding: 0; */
     height: 100vh;
-
+    padding: 50px 20px;
     video {
       height: 100%;
       width: 100%;
@@ -417,17 +400,12 @@ i.fa-solid {
   }
 
   .social-media-container {
-    padding: 10px;
+    padding: 40px 20px;
     height: auto;
   }
 
   .social-media-container .title {
     font-size: 22px;
-  }
-
-  .social-media-list {
-    flex-wrap: wrap;
-    gap: 10px;
   }
 
   .social-media-list li {
@@ -449,5 +427,41 @@ i.fa-solid {
 
   .map {
     height: 100%;
+  }
+}
+
+@media (max-width: 480px) {
+  .contact-container {
+    padding: 0px 10px;
+    height: 70vh;
+    flex-direction: column;
+  }
+  .contact-header {
+    /* margin-top: 50px; */
+    h1 {
+      font-size: 3rem;
+      color: #ffffff;
+    }
+
+    p {
+      font-size: 1.1rem;
+      color: #ffffff;
+      padding: 0 30px;
+    }
+  }
+  .social-media-list li a span {
+    font-size: 7px;
+  }
+  .bgvid {
+    padding: 50px 20px;
+    height: 70vh;
+    width: 100%;
+    video {
+      height: 100%;
+      width: 100%;
+    }
+  }
+  .LAUZC {
+    padding: 0px 20px;
   }
 }
