--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -46,8 +46,8 @@ footer .containerx {
 .profil .logo_area {
   display: flex;
   align-items: center;
-  height: 20%;
   overflow: hidden;
+  margin-bottom: 1.25rem;
 }
 
 .profil .logo_area img {
@@ -306,7 +306,7 @@ li.service_name {
 
 @media (max-width: 600px) {
   footer .containerx {
-    padding: 20px 40px;
+    padding: 30px 40px;
   }
 
   .content_footer {
@@ -323,11 +323,12 @@ li.service_name {
     display: flex;
     justify-content: center;
     width: 100%;
+    margin-bottom: 1rem;
+    height: fit-content;
   }
 
   .profil .logo_area img {
-    width: 150px;
-    height: auto;
+    width: 30%;
   }
 
   .desc_area {
@@ -370,5 +371,36 @@ li.service_name {
 
   .tou a {
     font-size: 12px;
+  }
+}
+
+@media (max-width: 480px) {
+  .content_footer {
+    margin: 0 0 1rem 0;
+  }
+  .service_header {
+    text-align: left;
+  }
+  .desc_area {
+    text-align: left;
+    align-content: flex-start;
+  }
+  .profil {
+    align-items: flex-start;
+  }
+  .social_media {
+    width: fit-content;
+  }
+  .profil .logo_area {
+    justify-content: flex-start;
+  }
+  .tou {
+    gap: 20px;
+    a {
+      margin: 0;
+    }
+  }
+  .footer_bottom hr {
+    width: 100%;
   }
 }
