--- a/src/components/home-content/homeContentmedia.css
+++ b/src/components/home-content/homeContentmedia.css
@@ -644,6 +644,12 @@
     width: 45px;
     height: 45px;
   }
+  @media (max-width: 1023px) {
+    .buttons {
+      height: fit-content;
+      margin: 30px 0 50px 0;
+    }
+
 }
 
 .image-container {
