--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -69,7 +69,7 @@
   display: flex;
   align-items: center;
   height: 65px;
-  margin-left: 90px;
+  margin-left: 60px;
 }
 
 .logo img {
@@ -290,10 +290,6 @@
     display: none;
   }
 
-  .logo img {
-    height: 60px;
-    width: 100%;
-  }
   .sidebar.open {
     left: 0;
   }
@@ -320,7 +316,7 @@
     font-size: 1.8rem;
     cursor: pointer;
     color: #000;
-    margin-right: 10px;
+    margin-right: 30px;
   }
   .btn-download {
     color: transparent;
@@ -333,8 +329,12 @@
   .btn-download:hover {
     background-color: transparent;
   }
+  .logo {
+    margin-left: 0;
+    padding: 1em;
+  }
   .logo img {
-    height: 100%;
+    height: 80px;
     width: 100%;
     transition: height 0.3s ease-in-out;
   }
