--- a/src/components/courses-content/coursesContent.css
+++ b/src/components/courses-content/coursesContent.css
@@ -69,6 +69,9 @@
   color: #000000;
   padding: 80px 60px;
   background: linear-gradient(to right, #dbeaf9, #e3f2fd, #fccfc7);
+  a {
+    text-decoration: inherit;
+  }
   .cards {
     display: flex;
     flex-wrap: wrap;
