--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-#root {
-  /* max-width: 1280px; */
-  /* margin: 0 auto; */
-  /* padding: 2rem; */
-  /* text-align: center; */
-}
-
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -18,6 +11,16 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.fade-in {
+  animation: fadeIn 1s ease-in-out forwards;
+  opacity: 0; /* Start transparent */
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
