--- a/src/components/courses-content/coursesContent.css
+++ b/src/components/courses-content/coursesContent.css
@@ -1,49 +1,50 @@
 @import "../fonts/fonts.css";
 
 .hero-section {
-  background: url("../../img/vid1.mp4") no-repeat center center;
-  background-size: contain;
   display: flex;
-
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
   width: 100%;
+  position: relative;
+  overflow: hidden;
 
   .bg {
     display: flex;
-
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
     color: #ffffff;
+    text-align: center;
+    z-index: 1;
+    padding: 0 20px;
+
     video {
       position: absolute;
+      top: 0;
+      left: 0;
       z-index: -1;
+      width: 100%;
+      height: 100%;
+      padding: 65px 50px;
 
-      align-items: center;
-      width: 93%;
-      height: 84%;
-      overflow: hidden;
       object-fit: cover;
     }
+
     h1 {
       font-size: 2.5em;
       font-family: "Sofia Pro Bold";
       margin-bottom: 20px;
-
-      text-align: center;
       text-transform: uppercase;
     }
+
     p {
       font-size: 1.1em;
-
-      text-align: center;
       margin-bottom: 20px;
       width: 80%;
     }
+
     button {
       margin-top: 20px;
       border-radius: 8px;
