--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -93,7 +93,7 @@
 }
 
 .navbar-links a {
-  color: #898989;
+  color: #6e6e6e;
   text-decoration: none;
   position: relative;
   transition: color 0.2s;
